fix: Change in z-index variable name

--- a/apps/docs/app/ui/layout/mobileMenu/mobileMenu.css
+++ b/apps/docs/app/ui/layout/mobileMenu/mobileMenu.css
@@ -9,7 +9,7 @@
     top: 0;
     width: 100%;
     height: 100vh;
-    z-index: var(--hd-zIndex-800);
+    z-index: var(--hd-z-index-800);
     opacity: 0;
 }
 
